infrastructure/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Infraestructura AntHill

Resources:
  AntHillVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  AntHillIGW:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AntHillVPC
      InternetGatewayId: !Ref AntHillIGW

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AntHillVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AntHillVPC

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AntHillIGW

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  AntHillSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH y App
      VpcId: !Ref AntHillVPC
      SecurityGroupIngress:
        - { IpProtocol: tcp, FromPort: 22, ToPort: 22, CidrIp: 0.0.0.0/0 }
        - { IpProtocol: tcp, FromPort: 5001, ToPort: 5002, CidrIp: 0.0.0.0/0 }

  AntHillReportsBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: reportes-anthill-devops-smltp-v4

  AntHillServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0c101f26f147fa7fd
      KeyName: vockey
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds: [!Ref AntHillSecurityGroup]
      IamInstanceProfile: LabInstanceProfile
      Tags:
        - Key: Name
          Value: AntHill-Production-Server
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Actualizar sistema e instalar dependencias básicas
          dnf update -y
          dnf install -y docker git
          systemctl start docker
          systemctl enable docker
          usermod -aG docker ec2-user

          # Instalar Docker Compose (Plugin V2)
          mkdir -p /usr/local/lib/docker/cli-plugins/
          curl -SL https://github.com/docker/compose/releases/latest/download/docker-compose-linux-x86_64 -o /usr/local/lib/docker/cli-plugins/docker-compose
          chmod +x /usr/local/lib/docker/cli-plugins/docker-compose

          # Clonar repositorio (Rama app-dev)
          cd /home/ec2-user
          rm -rf AntHill
          git clone -b app-dev https://github.com/TZeroW/AntHill.git
          cd AntHill

          # Levantar microservicios usando Docker Compose
          docker compose up -d --build

  AntHillPostsTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: "AntHill-Posts"
      AttributeDefinitions:
        - AttributeName: "PostId"
          AttributeType: "S"
      KeySchema:
        - AttributeName: "PostId"
          KeyType: "HASH"
      BillingMode: PAY_PER_REQUEST

Outputs:
  InstancePublicIP:
    Value: !GetAtt AntHillServer.PublicIp
